src/objects/ISSPCaseListView__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Set_API_Name__c</fullName>
        <label>Field Set API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_API_name__c</fullName>
        <label>Label API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_set__c</fullName>
        <label>Permission set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles_Id__c</fullName>
        <description>Profiles Id separated by ;</description>
        <label>Profiles Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Filter__c</fullName>
        <label>SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Order__c</fullName>
        <label>SOQL Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is ticked the Case list view will be shown under the COMPANY ADMINISTRATION TAB</description>
        <label>isAdmin</label>
        <type>Checkbox</type>
    </fields>
    <label>ISSP Case List View</label>
</CustomObject>